--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,13 +14,35 @@
     <%= stylesheet_link_tag 'questions', media: 'all', 'data-turbolinks-track': 'reload' if controller_name == 'questions' %>
   </head>
   <body class="<%= @body_class %>">
+    <header class="site-header">
+      <div class="header-container">
+        <%= link_to root_path, class: "logo" do %>
+          <span class="logo-text">Bible Trivia</span>
+        <% end %>
+        <nav class="main-nav">
+          <% if logged_in? %>
+            <%= link_to "Questions", questions_path, class: "nav-link" unless current_page?(questions_path) %>
+            <%= link_to "Categories", categories_path, class: "nav-link" unless current_page?(categories_path) %>
+            <%= link_to "Home", root_path, class: "nav-link" unless current_page?(root_path) %>
+            <%= link_to "Play", play_game_path, class: "nav-link play-button" unless current_page?(play_game_path) %>
+            <div class="user-info">
+              <span class="username"><%= current_user.username %></span>
+              <%= button_to "Log out", logout_path, method: :delete, class: "nav-link" %>
+            </div>
+          <% else %>
+            <%= link_to "Play", play_game_path, class: "nav-link play-button" %>
+            <%= link_to "Log In", "#", class: "nav-link login-button" %>
+            <%= link_to "Sign Up", "#", class: "nav-link signup-button" %>
+          <% end %>
+        </nav>
+      </div>
+    </header>
     <% flash.each do |type, message| %>
       <div class="flash <%= type %>">
         <%= message %>
       </div>
     <% end %>
 
-    <%= render 'shared/header' %>
     <%= yield %>
     <%= render 'shared/footer' %>
   </body>
